--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,13 @@
 # ----------------------- #
 
 url: http://Iawhite76.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: I haven't the Bloggiest
+subtitle: A noob's first training blog
+author: Ian White
 simple_search: http://google.com/search
-description:
+description: Documenting the process of becoming a web developer.
+keywords: ruby,ruby on rails,gem,web development,Ajax,SEO,scraping,programming,learning
+
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -63,13 +65,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: Iawhite76
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: @Iawhite76
 twitter_tweet_button: true
 
 # Google +1
@@ -78,7 +80,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: borris187
 googleplus_hidden: false
 
 # Pinboard
@@ -97,4 +99,4 @@ disqus_show_comment_count: false
 google_analytics_tracking_id:
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
