edit blog title

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://Iawhite76.github.io
-title: I haven't the Bloggiest
+title: This Blog is Making Me Thirsty
 subtitle: A noob's first training blog
 author: Ian White
 simple_search: http://google.com/search
